changed TDB to fixme's. List at bottom

--- a/Rapport/contents/Analysis/Analysis.tex
+++ b/Rapport/contents/Analysis/Analysis.tex
@@ -24,4 +24,4 @@ After starting, the robot needs to know when to stop. The pre-determined end-poi
 As part of its functionality, the robot needs to be able to see objects that are in front of it and avoid them. 
 
 \section{Behaviour}
-TBD (algorithm)
+\fixme{algorithm}
