--- a/Rapport/contents/appendices/groupcollab.tex
+++ b/Rapport/contents/appendices/groupcollab.tex
@@ -1,4 +1,4 @@
-TBD hele den her section
+\fixme{hele den her section}
 \section{Group collaboration agreement}
 \subsection{Contact Information}
 \begin{table}[h!]
