--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -1,4 +1,4 @@
-TBD mere fyld
+\fixme{mere fyld}
 This section specifies the requirements. The requirements have been found through the analysis.
 
 \cite{ucn}
