--- a/Rapport/rapport.tex
+++ b/Rapport/rapport.tex
@@ -66,5 +66,5 @@
 \input{contents/appendices/Ccode.tex}
 \input{contents/appendices/Csharpcode.tex}
 \printbibliography
-
+\listoffixmes
 \end{document}
