--- a/Rapport/settings/preamble.tex
+++ b/Rapport/settings/preamble.tex
@@ -1,6 +1,7 @@
 %page setup (page size, text size, page layout, chapters start on a new page).
 %memoir is a form of book class that supports any kind of document.
 \documentclass[fleqn,a4paper,12pt,twoside,openany]{memoir}
+\usepackage[footnote,draft,silent,danish]{fixme}
 
 \usepackage{titlesec}
 \usepackage{anysize}
