--- a/Rapport/contents/test/test.tex
+++ b/Rapport/contents/test/test.tex
@@ -1,6 +1,6 @@
 In this section the different parts and signals will be tested, this is to make sure everything is up to par with our requirements specifications. The tests consists of measuring different factors, such as current, voltage and response time of each fundamental part. The testing will be done with the available measuring devices such as an oscilloscope, power supply or multimeter.
 
-TBD ALT TEST SKAL TJEKKES IGENNEM 
+\fixme{ALT TEST SKAL TJEKKES IGENNEM}
 
 \section{Unit Testing}
 
@@ -55,7 +55,7 @@ All of the transistors were tested on the part of the H-bridge in question.
 Since there was a 0 in value on the base, it is suspected that a resistor which sat on the board just before the transistor. This and the other resistor values were measured and found to be identical, based on the measures it could be concluded that it was most likely a failed transistor.\\
 
 It was concluded that the damaged transistor was the: Q14 \cite{Q14}  
-(TBD link til schematics).\\
+\fixme{link til schematics}.\\
 
 The results were as following:\
 
