Det kom ikke med lol
why oh god why

--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -12,6 +12,7 @@ In this section the different components of the hardware will be listed, describ
 	\label{Hardware diagram}
 \end{figure}
 
+The micro controller is connected to the motor-shield.\ The motor-shield is then connected to the two motors, called motor 1 and motor 2 and is powering both motors.\ The micro controller is receiving data from the sensor set; the ultrasound sensors and the tachometer sensor.\ The micro controller then receives the data from the sensors and sends it further to the Bluetooth transceiver and then the Bluetooth transceiver will send it to the interface. \\ \\
 
 \section{Sensors and sensor concept}
 \fixme{Skal skrives om til nuværende setup}
@@ -89,8 +90,8 @@ Ultrasound sensors have something called a dead zone, this occours when an objec
 Some materials are very absorbent, which will result in less reflected ultrasound to be detected by the receiver.
 
 \subsubsection{Mounting}
-
 \fixme{TBD billede med lille tekst}
+
 %\begin{figure}[!ht]
 	%\centering
 	%\includegraphics[width=0.7\textwidth]{figures/mount.jpg}
