added bibtex reference

--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -1,6 +1,4 @@
 @online{ucn,
-author={placeholderAuthor},
-title = {placeholderTitle },
 year = 2016,
 url = {http://www.ucn.dk},
 }
@@ -10,4 +8,18 @@ author={Group 2, UCN},
 title = {Third semester report},
 note = {Chapter 10, board schematics},
 year = 2016,
+}
+
+@online{HDL,
+author={Wikipedia},
+title = {Hardware description language},
+year = 2016,
+url = {https://en.wikipedia.org/wiki/Hardware_description_language},
+}
+
+@online{CPLD,
+author={Wikipedia},
+title = {Complex programmable logic device },
+year = 2017,
+url = {https://en.wikipedia.org/wiki/Complex_programmable_logic_device},
 }
