--- a/Rapport/contents/reqspec.tex
+++ b/Rapport/contents/reqspec.tex
@@ -1,7 +1,6 @@
 \fixme{mere fyld}
 This section specifies the requirements. The requirements have been found through the analysis.
-
-\cite{ucn}
+%\cite{ucn}
 \begin{enumerate}
 	\item[•]The robot needs line following capabilities
 	\item[•]The robot needs object avoidance
