--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -20,7 +20,7 @@ The robot will utilize one set of sensors - one set of QRE1113 sensors, which wi
 The second is a hybrid set of ultrasound and infrared sensors. These will be working together to make the robot able to navigate open spaces more precisely, since infrared and ultrasound sensors work the best under different circumstances. This will end up as a product which is more optimized for usage in situations that would not be ideal for one of the other, since the hybrid design will leverage shortcomings of a given sensor method.\\
 
 \subsection{Choice of sensors}
-\fixme{everything}
+\fixme{Skal læses igennem, mangler der noget?}
 
 To find out what sensor to use in navigating the robot, two sensors were compared briefly on their specifications; The HC-SR04 and the PING))) Ultrasonic Distance Sensor.\\
 The specifications have been put into a table for a quick perspective into the sensing distance, volt, current and price for each sensor.\\
