--- a/Rapport/contents/LOR.tex
+++ b/Rapport/contents/LOR.tex
@@ -1,3 +1,10 @@
+@online{ HC-SR04,
+url = {http://www.robotshop.com/en/hc-sr04-ultrasonic-range-finder.html},
+  urldate = {08-01-2016}
+}
 
-%\url{}\\
+@online{ PING,
+url = {http://www.robotshop.com/en/parallax-ping-ultrasonic-sensor.html},
+  urldate = {08-01-2016}
+}
 
