added correct bibtex ref and destroyed the imposter

--- a/Rapport/bibliography/bibliography.bib
+++ b/Rapport/bibliography/bibliography.bib
@@ -1,25 +1,37 @@
 @online{ucn,
-year = 2016,
-url = {http://www.ucn.dk},
+	year = 2016,
+	url = {http://www.ucn.dk},
 }
 
 @unpublished{Q14,
-author={Group 2, UCN},
-title = {Third semester report},
-note = {Chapter 10, board schematics},
-year = 2016,
+	author={Group 2, UCN},
+	title = {Third semester report},
+	note = {Chapter 10, board schematics},
+	year = 2016,
 }
 
 @online{HDL,
-author={Wikipedia},
-title = {Hardware description language},
-year = 2016,
-url = {https://en.wikipedia.org/wiki/Hardware_description_language},
+	author={Wikipedia},
+	title = {Hardware description language},
+	year = 2016,
+	url = {https://en.wikipedia.org/wiki/Hardware_description_language},
 }
 
 @online{CPLD,
-author={Wikipedia},
-title = {Complex programmable logic device },
-year = 2017,
-url = {https://en.wikipedia.org/wiki/Complex_programmable_logic_device},
+	author={Wikipedia},
+	title = {Complex programmable logic device },
+	year = 2017,
+	url = {https://en.wikipedia.org/wiki/Complex_programmable_logic_device},
+}
+
+@online{ HC-SR04,
+	title = {HRC-SO4},
+	url = {http://www.robotshop.com/en/hc-sr04-ultrasonic-range-finder.html},
+ 	year = 2017
+}
+
+@online{ PING,
+	title = {PING))) Sensor},
+	url = {http://www.robotshop.com/en/parallax-ping-ultrasonic-sensor.html},
+	year = 2017
 }
