--- a/Rapport/contents/hardware/hardwaredesc.tex
+++ b/Rapport/contents/hardware/hardwaredesc.tex
@@ -32,7 +32,7 @@ In the case of this project, the device available is the HC-SR04, even if the PI
 
 \begin{table}[!ht]
 \centering
-\caption{Sensor table}
+
 \label{Sensor table}
 \begin{tabular}{|l|l|l|}
 \hline
@@ -42,8 +42,8 @@ Working current         & 15mA      & 30mA       \\ \hline
 Voltage                 & 5DC       & 5DC        \\ \hline
 Price                   & 17.63,- DKK & 211.53,- DKK \\ \hline
 \end{tabular}
-\cite{HC-SR04}
-\cite{PING}
+\caption{Sensor table \cite{HC-SR04} \cite{PING}}
+
 \end{table}
 
 
